<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spin_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/types"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_address" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_webSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/significantDate"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_Address">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_significantDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/significantDate"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_webSite">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spin_SignificantDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/types"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_significantDate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_relationShip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/significantDate"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_SignificantDate">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spin_relationship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/types"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_relationShip" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_Sip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sip"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spin_relationship">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_Sip">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:entries="@array/types"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/tip_notes"/>

</androidx.constraintlayout.widget.ConstraintLayout>